force-app/main/default/objects/At_Risk__c/At_Risk__c.object-meta.xml
<CustomObject>
    <label>At Risk</label>
    <nameField>
        <label>At Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>At Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>