force-app/main/default/objects/At_Risk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>At Risks</relationshipLabel>
    <relationshipName>At_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>