force-app/main/default/objects/At_Risk__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>At Risks</relationshipLabel>
    <relationshipName>At_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>