force-app/main/default/objects/At_Risk__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>OR (ISBLANK (Resolved_Date__c), Resolved_Date__c &gt; DATEVALUE (NOW()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>