force-app/main/default/objects/At_Risk__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>