force-app/main/default/objects/At_Risk__c/fields/Risk_Indicators__c.field-meta.xml
<CustomField>
    <fullName>Risk_Indicators__c</fullName>
    <label>Risk Indicators</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declining Volume or Revenue</fullName>
            </value>
            <value>
                <fullName>Reduced Engagement / Responsiveness</fullName>
            </value>
            <value>
                <fullName>Service Issues or Escalations</fullName>
            </value>
            <value>
                <fullName>Competitive Displacement Risk</fullName>
            </value>
            <value>
                <fullName>Pricing Pressure</fullName>
            </value>
            <value>
                <fullName>Key Contact Turnover</fullName>
            </value>
            <value>
                <fullName>Lack of Executive Relationships</fullName>
            </value>
            <value>
                <fullName>No recent QBR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>