force-app/main/default/objects/At_Risk__c/validationRules/Detail_cant_be_blank_if_indicator_other.validationRule-meta.xml
<ValidationRule>
    <fullName>Detail_cant_be_blank_if_indicator_other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    INCLUDES(
        Risk_Indicators__c,
        &quot;Other&quot;
    ),
    ISBLANK(Other__c)
)</errorConditionFormula>
    <errorDisplayField>Risk_Indicators__c</errorDisplayField>
    <errorMessage>Please provide details in the Other field when Other is selected as a Risk Indicator.</errorMessage>
</ValidationRule>